<resources>
    <string name="app_name">Assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="author_name">Author Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="content">Write something</string>
    <string name="enter_content">Enter some content</string>
    <string name="choose_category">Choose category</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="technology">Technology</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="all">All</string>
    <string name="please_select">Please Select..</string>
    <string name="select_a_category">Select a category</string>

    <string-array name="categories">
        <item>Lifestyle</item>
        <item>Technology</item>
        <item>Miscellaneous</item>
    </string-array>
</resources>
